--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -306,21 +306,121 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Initialize parameters"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def init_params():\n",
+    "    W1 = np.random.rand(10,784)\n",
+    "    b1 = np.random.rand(10,1)\n",
+    "\n",
+    "    W2 = np.random.rand(10,10)\n",
+    "    b2 = np.random.rand(10,1)\n",
+    "    return W1, b1, W2, b2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the function for Forward Propagation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ReLU(Z):\n",
+    "    return np.maximum(0, Z)\n",
+    "\n",
+    "\n",
+    "def softmax(Z):\n",
+    "    return (np.exp(Z) / np.sum(np.exp(Z)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_prop(W1, b1, W2, b2, X):\n",
+    "    Z1 = W1.dot(X) + b1\n",
+    "    A1 = ReLU(Z1)\n",
+    "    Z2 = W2.dot(A1) + b2\n",
+    "    A2 = softmax(Z2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the function for Backward Propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot(Y):\n",
+    "    one_hot_Y = np.zeros((Y.size, Y.max() + 1))\n",
+    "    one_hot_Y[np.arange(Y.size), Y] = 1\n",
+    "    one_hot_Y = one_hot_Y.T\n",
+    "    return one_hot_Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deriv_ReLU(Z):\n",
+    "    return Z > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backward_prop(Z1, A1, Z2, A2, W2, X, Y):\n",
+    "    m = Y.size\n",
+    "    one_hot_Y = one_hot(Y)\n",
+    "    dZ2 = A2 - one_hot_Y\n",
+    "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
+    "    db2 = 1 / m * np.sum(dZ2, 2)\n",
+    "\n",
+    "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)\n",
+    "    dW1 = 1 / m * dZ1.dot(X.T)\n",
+    "    db1 = 1 / m * np.sum(dZ1, 2)\n",
+    "    return dW1, db1, dW2, db2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, alpha):\n",
+    "    W1 = W1 - alpha * dW1\n",
+    "    b1 = b1 - alpha * db1\n",
+    "    W2 = W2 - alpha * dW2\n",
+    "    b2 = b2 - alpha * db2\n",
+    "    return W1, b1, W2, b2"
+   ]
   }
  ],
  "metadata": {
