--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "(784,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_params():\n",
-    "    W1 = np.random.rand(10,784)\n",
-    "    b1 = np.random.rand(10,1)\n",
+    "    W1 = np.random.rand(10,784) - 0.5\n",
+    "    b1 = np.random.rand(10,1) - 0.5\n",
     "\n",
-    "    W2 = np.random.rand(10,10)\n",
-    "    b2 = np.random.rand(10,1)\n",
+    "    W2 = np.random.rand(10,10) - 0.5\n",
+    "    b2 = np.random.rand(10,1) - 0.5\n",
     "    return W1, b1, W2, b2"
    ]
   },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,12 +343,15 @@
     "\n",
     "\n",
     "def softmax(Z):\n",
-    "    return (np.exp(Z) / np.sum(np.exp(Z)))"
+    "    # print('The value of the Z is',Z)\n",
+    "    A = np.exp(Z) / sum(np.exp(Z))\n",
+    "    # print('The value of the A is',A)\n",
+    "    return A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +359,8 @@
     "    Z1 = W1.dot(X) + b1\n",
     "    A1 = ReLU(Z1)\n",
     "    Z2 = W2.dot(A1) + b2\n",
-    "    A2 = softmax(Z2)"
+    "    A2 = softmax(Z2)\n",
+    "    return Z1, A1, Z2, A2"
    ]
   },
   {
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,17 +404,17 @@
     "    one_hot_Y = one_hot(Y)\n",
     "    dZ2 = A2 - one_hot_Y\n",
     "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
-    "    db2 = 1 / m * np.sum(dZ2, 2)\n",
+    "    db2 = 1 / m * np.sum(dZ2)\n",
     "\n",
     "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)\n",
     "    dW1 = 1 / m * dZ1.dot(X.T)\n",
-    "    db1 = 1 / m * np.sum(dZ1, 2)\n",
+    "    db1 = 1 / m * np.sum(dZ1)\n",
     "    return dW1, db1, dW2, db2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,6 +424,48 @@
     "    W2 = W2 - alpha * dW2\n",
     "    b2 = b2 - alpha * db2\n",
     "    return W1, b1, W2, b2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_predictions(A2):\n",
+    "    return np.argmax(A2, 0)\n",
+    "\n",
+    "\n",
+    "def get_accuracy(predictions, Y):\n",
+    "    print(predictions, Y)\n",
+    "    return np.sum(predictions == Y) / Y.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(X, Y, iterations, alpha):\n",
+    "    W1, b1, W2, b2 = init_params()\n",
+    "    for i in range(iterations):\n",
+    "        Z1, A1, Z2, A2 = forward_prop(W1, b1, W2, b2, X)\n",
+    "        dW1, db1, dW2, db2 = backward_prop(Z1, A1, Z2, A2, W2, X, Y)\n",
+    "        W1, b1, W2, b2 = update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, alpha)\n",
+    "        if i % 20 == 0:\n",
+    "            print('iterations:', i)\n",
+    "            print('Accuracy:', get_accuracy(get_predictions(A2), Y))\n",
+    "    return W1, b1, W2, b2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W1, b1, W2, b2 = gradient_descent(X_train, Y_train, 200, 0.1)"
    ]
   }
  ],
