--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -312,16 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def init_params():\n",
+    "def init_params(size):\n",
     "    W1 = np.random.rand(10,784) - 0.5\n",
-    "    b1 = np.random.rand(10,1) - 0.5\n",
-    "\n",
+    "    b1 = np.random.rand(10,size) - 0.5\n",
     "    W2 = np.random.rand(10,10) - 0.5\n",
-    "    b2 = np.random.rand(10,1) - 0.5\n",
+    "    b2 = np.random.rand(10,size) - 0.5\n",
     "    return W1, b1, W2, b2"
    ]
   },
@@ -334,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ReLU(Z):\n",
-    "    return np.maximum(0, Z)\n",
+    "    return np.maximum(Z, 0)\n",
     "\n",
     "\n",
     "def softmax(Z):\n",
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,26 +402,26 @@
     "    m = Y.size\n",
     "    one_hot_Y = one_hot(Y)\n",
     "    dZ2 = A2 - one_hot_Y\n",
-    "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
-    "    db2 = 1 / m * np.sum(dZ2)\n",
+    "    dW2 = (1 / m) * dZ2.dot(A1.T)\n",
+    "    db2 = (1 / m) * np.sum(dZ2, 1)\n",
     "\n",
-    "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)\n",
-    "    dW1 = 1 / m * dZ1.dot(X.T)\n",
-    "    db1 = 1 / m * np.sum(dZ1)\n",
+    "    dZ1 = W2.T.dot(dZ2 * deriv_ReLU(Z1))\n",
+    "    dW1 = (1 / m) * dZ1.dot(X.T)\n",
+    "    db1 = (1 / m) * np.sum(dZ1, 1)\n",
     "    return dW1, db1, dW2, db2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, alpha):\n",
     "    W1 = W1 - alpha * dW1\n",
-    "    b1 = b1 - alpha * db1\n",
+    "    b1 = b1 - alpha * np.reshape(db1, (10,1))\n",
     "    W2 = W2 - alpha * dW2\n",
-    "    b2 = b2 - alpha * db2\n",
+    "    b2 = b2 - alpha * np.reshape(db2, (10,1))\n",
     "    return W1, b1, W2, b2"
    ]
   },
@@ -443,12 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(X, Y, iterations, alpha):\n",
-    "    W1, b1, W2, b2 = init_params()\n",
+    "    W1, b1, W2, b2 = init_params(Y.size)\n",
     "    for i in range(iterations):\n",
     "        Z1, A1, Z2, A2 = forward_prop(W1, b1, W2, b2, X)\n",
     "        dW1, db1, dW2, db2 = backward_prop(Z1, A1, Z2, A2, W2, X, Y)\n",
@@ -461,11 +460,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/df/mx2gggdn7p55_8g8_fxxk8zc0000gn/T/ipykernel_9137/1916436928.py:7: RuntimeWarning: overflow encountered in exp\n",
+      "  A = np.exp(Z) / sum(np.exp(Z))\n",
+      "/var/folders/df/mx2gggdn7p55_8g8_fxxk8zc0000gn/T/ipykernel_9137/1916436928.py:7: RuntimeWarning: overflow encountered in add\n",
+      "  A = np.exp(Z) / sum(np.exp(Z))\n",
+      "/var/folders/df/mx2gggdn7p55_8g8_fxxk8zc0000gn/T/ipykernel_9137/1916436928.py:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  A = np.exp(Z) / sum(np.exp(Z))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iterations: 0\n",
+      "[1 0 1 ... 1 3 3] [0 6 1 ... 5 3 3]\n",
+      "Accuracy: 0.1660487804878049\n",
+      "iterations: 20\n",
+      "[0 0 0 ... 0 0 0] [0 6 1 ... 5 3 3]\n",
+      "Accuracy: 0.09829268292682927\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m W1, b1, W2, b2 \u001b[39m=\u001b[39m gradient_descent(X_train, Y_train, \u001b[39m200\u001b[39;49m, \u001b[39m0.1\u001b[39;49m)\n",
+      "\u001b[1;32m/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb Cell 22\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(X, Y, iterations, alpha)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m W1, b1, W2, b2 \u001b[39m=\u001b[39m init_params(Y\u001b[39m.\u001b[39msize)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(iterations):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     Z1, A1, Z2, A2 \u001b[39m=\u001b[39m forward_prop(W1, b1, W2, b2, X)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     dW1, db1, dW2, db2 \u001b[39m=\u001b[39m backward_prop(Z1, A1, Z2, A2, W2, X, Y)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     W1, b1, W2, b2 \u001b[39m=\u001b[39m update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, alpha)\n",
+      "\u001b[1;32m/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb Cell 22\u001b[0m in \u001b[0;36mforward_prop\u001b[0;34m(W1, b1, W2, b2, X)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward_prop\u001b[39m(W1, b1, W2, b2, X):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     Z1 \u001b[39m=\u001b[39m W1\u001b[39m.\u001b[39;49mdot(X) \u001b[39m+\u001b[39m b1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     A1 \u001b[39m=\u001b[39m ReLU(Z1)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/wzy/Desktop/GitHub/Digit-Reconizer/mnist.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     Z2 \u001b[39m=\u001b[39m W2\u001b[39m.\u001b[39mdot(A1) \u001b[39m+\u001b[39m b2\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "W1, b1, W2, b2 = gradient_descent(X_train, Y_train, 200, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_predictions(X, W1, b1, W2, b2):\n",
+    "    _, _, _, A2 = forward_prop(W1, b1, W2, b2, X)\n",
+    "    predictions = get_predictions(A2)\n",
+    "    return predictions\n",
+    "\n",
+    "\n",
+    "def test_predictions(index, W1, b1, W2, b2):\n",
+    "    current_image = X_train[:, index, None]\n",
+    "    prediction = make_predictions(X_train[:, index, None], W1, b1, W2, b2)\n",
+    "    label = Y_train[index]\n",
+    "    print('Prediction:', prediction)\n",
+    "    print('Label:', label)\n",
+    "\n",
+    "    current_image = current_image.reshape((28,28)) * 255\n",
+    "    plt.gray()\n",
+    "    plt.imshow(current_image, interpolation = 'nearest')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W1, b1, W2, b2 = gradient_descent(X_train, Y_train, 200, 0.1)"
+    "test_predictions(5, W1, b1, W2, b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_predictions = make_predictions(X_dev, W1, b1, W2, b2)\n",
+    "get_accuracy(dev_predictions, Y_dev)"
    ]
   }
  ],
